Apply share library

--- a/Makefile_Tutorial/Static_Lib/Makefile
+++ b/Makefile_Tutorial/Static_Lib/Makefile
@@ -21,8 +21,21 @@ dir_create:
 	done
 static_lib: | $(STATIC_LIB_DIR)
 	ar rcs bin/static/libhello.a obj/hello.o
+dynamic_lib: | $(STATIC_LIB_DIR)
+	gcc -shared obj/hello.o -o bin/shared/libhello.so
 all: obj/main.o
 	gcc obj/main.o -L$(STATIC_LIB_DIR) -lhello -o bin/statically-linked
+# Step 1
+# 	Build executive file With share library
+# gcc obj/main.o -Lbin/shared -lhello -o bin/user-shared-library
+# set-up LD_LIBRARY_PATH in /usr/lib
+# LD_LIBRARY_PATH=$(pwd)/bin/shared bin/use-shared-library
+# Step 2
+#
+#   Moving the shared object to a standard location
+#
+# sudo mv bin/shared/libtq84.so /usr/lib
+# sudo chmod 755 /usr/lib/libtq84.so
 $(STATIC_LIB_DIR): ; @mkdir -p $@
 $(BIN_DIR): ; @mkdir -p $@
 $(OBJ_DIR): ; @mkdir -p $@
